--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
             width=300
             heigh=150></p></div>
         </div>   
-
+        <div class = "aboutme">
+                <h2>Who am I?</h2>
+                  <p>Born in London and brought up in the Isle of Man, I've seen a range of enviroments. It's encouraged me to adapt, but also bring my own skills.</p>
+            </div>
         <div class = "section2">
             <h2>My Interests in Technology and Coding</h2>
               <p>I have been working in various job roles since I graduated and every one used technology. Technology is now vital in our day to day lives, from phones, laptops to ordering a taxi and food. It's moving so quickly it's almost impossible to guess where we could be next week, next month or next year.</p>
