updated my about me

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <div class = "aboutme">
                 <h2>Who am I?</h2>
                   <p>Born in London and brought up in the Isle of Man, I've seen a range of enviroments. It's encouraged me to adapt, but also bring my own skills.</p>
+                  <p>Browse my portfolio to see examples of my work and learn more about me.</p>
+                  <p>Feel free to get in touch!</p>
             </div>
         <div class = "section2">
             <h2>My Interests in Technology and Coding</h2>
