added three legs to HTML

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                   <p>Browse my portfolio to see examples of my work and learn more about me.</p>
                   <p>Feel free to get in touch!</p>
             </div>
+            <div class = "threelegs"><p><img src ="three_legs.png" alt = "three legs of man"
+                width=300
+                heigh=150></p></div>
         <div class = "section2">
             <h2>My Interests in Technology and Coding</h2>
               <p>I have been working in various job roles since I graduated and every one used technology. Technology is now vital in our day to day lives, from phones, laptops to ordering a taxi and food. It's moving so quickly it's almost impossible to guess where we could be next week, next month or next year.</p>
