--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             height="100"></p></div>
             <div class = "section1">
                 <h2>Why I chose Code Nation</h2>
-                    <p>After working in research and analysis for five years, I was let go from my role in March 2019. Then two days later I received a call from Code Nation after I had expressed interest in the January intake. Though unfortunately I had been unable to start it in the previous months as it's full time, I now not only had the time but also the funding.</p>
-                    <p>The one advantage of Code nation was that the course was a full time, three week, full view of coding. This meant that in a relatively short period of time I could get an intense and practical overview into the world of coding and I saw if I would like to pursue it further.</p>
-                    <p>Another part that I loved was the project work. I was elected Project Lead and this allowed me to demonstrate the skills I had gained over my working life in instructing and managing projects, while also continuing to develop my coding skills by learning how to use Xcode.</p>
-                    <p>The company also offers further training and help through the Masters course so if I did decide to pursue coding I would have options</p>
-                    <p>The course is also local so in the end, it was a no brainer.</p>
+                    <ul><li>Skills development - As someone who had never worked in coding, the course covered Javascript, CSS, HTML, Xcode, agile working.</li>
+                    <li>Opportunity to be a Project Lead - I was elected Project Lead for our group's iOS app development project. This allowed me to demonstrate the skills I had gained over my working life in instructing and managing projects, while also continuing to develop my coding skills by learning how to use Xcode.</li>
+                    <li>Introduction to coding - full time, three week, full view of coding. This meant that in a relatively short period of time I could get an intense and practical overview into the world of coding and I saw if I would like to pursue it further.</li>
+                    <li>Friendly faces - the best part about this course was that it's a small group, with people's skills ranging from completely new to coding to novices. This meant that we could learn not only from the teacher but also from each other.</li>
+                    <li>Local and classroom based - While there are numourous online resources to learn to code, nothing beats sitting in a classroom and having a teacher just a shout away.</li></ul>
             </div>
             <div class = "codenation"><p><img src="Codenationlogo.jpg" alt = "Code Nation logo"></p></div>
         <div class = "section3">
