--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             height="100"></p></div>
             <div class = "section1">
                 <h2>Why I chose Code Nation</h2>
-                    <ul><li>Skills development - As someone who had never worked in coding, the course covered Javascript, CSS, HTML, Xcode, agile working.</li>
-                    <li>Opportunity to be a Project Lead - I was elected Project Lead for our group's iOS app development project. This allowed me to demonstrate the skills I had gained over my working life in instructing and managing projects, while also continuing to develop my coding skills by learning how to use Xcode.</li>
-                    <li>Introduction to coding - full time, three week, full view of coding. This meant that in a relatively short period of time I could get an intense and practical overview into the world of coding and I saw if I would like to pursue it further.</li>
-                    <li>Friendly faces - the best part about this course was that it's a small group, with people's skills ranging from completely new to coding to novices. This meant that we could learn not only from the teacher but also from each other.</li>
-                    <li>Local and classroom based - While there are numourous online resources to learn to code, nothing beats sitting in a classroom and having a teacher just a shout away.</li></ul>
+                    <p><h3>Skills development</h3> As someone who had never worked in coding, the course covered Javascript, CSS, HTML, Xcode, agile working.</p>
+                    <p><h3>Opportunity to be a Project Lead</h3> I was elected Project Lead for our group's iOS app development project. This allowed me to demonstrate the skills I had gained over my working life in instructing and managing projects, while also continuing to develop my coding skills by learning how to use Xcode.</p>
+                    <p><h3>Introduction to coding</h3> full time, three week, full view of coding. This meant that in a relatively short period of time I could get an intense and practical overview into the world of coding and I saw if I would like to pursue it further.</p>
+                    <p><h3>Friendly faces</h3> the best part about this course was that it's a small group, with people's skills ranging from completely new to coding to novices. This meant that we could learn not only from the teacher but also from each other.</p>
+                    <p><h3>Local and classroom based</h3> While there are numourous online resources to learn to code, nothing beats sitting in a classroom and having a teacher just a shout away.</p>
             </div>
             <div class = "codenation"><p><img src="Codenationlogo.jpg" alt = "Code Nation logo"></p></div>
         <div class = "section3">
