--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
             <img src="linkedin.jpg" alt = "linkedin"
                 width=20
                 heigh=20></a>
-        <img src = "github.jpg" alt = "github"
+        <a href = "https://github.com/JadeKneen"><img src = "github.jpg" alt = "github"
                 width=20
-                heigh=20>
-        <a href = "http://jaykaylifestyle.home.blog"><img src = "wordpress.png" alt = "wordpress"
-                width=20
-                height="20"></a>
+                heigh=20></a>
         <a href = "http://www.twitter.com"><img src = "twitter.png" alt = "twitter"
                     width=20
                     height="20"></a></p></div>
