expanded on laws and regs

--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                 <p><h3>Describe legal guidelines and constraints that 
                     impact digital projects</h3></p>
                 <p>Legal constraints such as GDPR are important to recognise while creating digital projects.The main concern is that businesses are now unable to collect data on users and customers without their consent. This is done through cookies which are outlined for the user to opt out of. Similarly the business is not able to send out any marketing materials unless the user opts in. Another concern is that if a business is hacked, then they must inform users within a 72 hours of discovery.</p>
-                </div>
+                <p>A recent legislation which will impact digital projects is Article 13. This strengthens copyright laws in the EU to hold large corporations accountable but developers will need to be vigilant.</p>
+            </div>
         <div class = "section4">
             <h2>Subheading 4</h2>
                 </div>      
