resized trello button

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 
                 <p><h3>Plan and carry out tasks using IT</h3></p>
                 <p>I have varied experience in planning and carrying out tasks using IT. The most recent of which was designing this website. The planning stages of this can be seen on my public Trello board.</p>
-                <a href="https://trello.com/b/IIQMMCgZ/blog-jade"><img src = "trello.png" alt = "trello link"></a>
+                <a href="https://trello.com/b/IIQMMCgZ/blog-jade"><img src = "trello.png" alt = "trello link"
+                    width="40"
+                    height="50"></a>
                 </p>
                 <p>As you can see from this board, I have separated the creation of the blog into sections (or ‘cards’). By doing this it not only makes the task more manageable but also allows me to track where I am with each section. These are then moved from ‘To Do’ to ‘In Progress’ or ‘Complete’ as these are done.
                 </p>
