--- a/index.html
+++ b/index.html
@@ -108,7 +108,12 @@
                 <p>A recent legislation which will impact digital projects is Article 13. This strengthens copyright laws in the EU to hold large corporations accountable but developers will need to be vigilant.</p>
             </div>
         <div class = "section4">
-            <h2>Subheading 4</h2>
+            <h2>Review</h2>
+                <h3>Review the ongoing use of IT tools and change approach as needed – in making your own website, are you happy with the tools you used?</h3>
+                <h3>Describe whether the IT tools selected were appropriate</h3>
+                <h3>Assess the strengths and weaknesses of your final project</h3>
+                <h3>Describe further improvements you can make to your project</h3>
+                <h3>Review outcomes to make sure they match requirements and are fit for purpose</h3>
                 </div>      
     </body>
 
