added to review section 1.1

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
             <h2>Review</h2>
                 <h3>Review the ongoing use of IT tools and change approach as needed – in making your own website, are you happy with the tools you used?</h3>
                 <h3>Describe whether the IT tools selected were appropriate</h3>
+                <p>Yes, I used Visual Studio and Trello. These enabled me to organise my work and plan.</p>
                 <h3>Assess the strengths and weaknesses of your final project</h3>
+                
                 <h3>Describe further improvements you can make to your project</h3>
                 <h3>Review outcomes to make sure they match requirements and are fit for purpose</h3>
                 </div>      
