--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <h3>Describe whether the IT tools selected were appropriate</h3>
                 <p>Yes, I used Visual Studio and Trello. These enabled me to organise my work and plan.</p>
                 <h3>Assess the strengths and weaknesses of your final project</h3>
-                
+                <p>The colour scheme is minimalist which is what I wanted. However, it can come across as quite basic.</p>
                 <h3>Describe further improvements you can make to your project</h3>
                 <h3>Review outcomes to make sure they match requirements and are fit for purpose</h3>
                 </div>      
