--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 <h3>Assess the strengths and weaknesses of your final project</h3>
                 <p>The colour scheme is minimalist which is what I wanted. However, it can come across as quite basic.</p>
                 <h3>Describe further improvements you can make to your project</h3>
+                <p>Going forward I would like to add more pages. I would also like to add personal photos.</p>
                 <h3>Review outcomes to make sure they match requirements and are fit for purpose</h3>
                 </div>      
     </body>
