--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 <h3>Describe further improvements you can make to your project</h3>
                 <p>Going forward I would like to add more pages. I would also like to add personal photos.</p>
                 <h3>Review outcomes to make sure they match requirements and are fit for purpose</h3>
+                <p>Yes, the website matches the requirements and fit for purpose.</p>
                 </div>      
     </body>
 
