--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
             </div>
         <div class = "section4">
             <h2>Review</h2>
-                <h3>Review the ongoing use of IT tools and change approach as needed – in making your own website, are you happy with the tools you used?</h3>
+                <h3>Review the ongoing use of IT tools and change approach as needed – 
+                    in making your own website, are you happy with the tools you used?</h3>
+                <p>Yes I am happy with the tools I used. They were easy to learn and practical for what I needed. The main benefits were that I could plan the website by making cards and tracking progress. Visual Studio was easy to use and I could download it on my home laptop to practice.</p>
                 <h3>Describe whether the IT tools selected were appropriate</h3>
                 <p>Yes, I used Visual Studio and Trello. These enabled me to organise my work and plan.</p>
                 <h3>Assess the strengths and weaknesses of your final project</h3>
