--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
                 <p>Going forward I would like to add more pages. I would also like to add personal photos.</p>
                 <h3>Review outcomes to make sure they match requirements and are fit for purpose</h3>
                 <p>Yes, the website matches the requirements and fit for purpose.</p>
+                <h3>Review the benefits and drawbacks of IT tools and systems used in terms of productivity and efficiency</h3>
+                <h3>Describe ways to improve productivity and efficiency </h3>
+                <h3>Develop solutions to improve own productivity using IT in digital projects</h3>
+                <h3>Describe how you would go about testing digital solutions</h3>
                 </div>      
     </body>
 
