--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
                 <h3>Review outcomes to make sure they match requirements and are fit for purpose</h3>
                 <p>Yes, the website matches the requirements and fit for purpose.</p>
                 <h3>Review the benefits and drawbacks of IT tools and systems used in terms of productivity and efficiency</h3>
+                <p>The benefits of using Trello was that it could be accessed from the classroom and home. While Visual Studio was not online, I could download the software at home which enabled me to continue practice after hours.</p>    
+                </p>
                 <h3>Describe ways to improve productivity and efficiency </h3>
+                <p>Being more efficent with Trello would have improved productivity in this task.</p>
                 <h3>Develop solutions to improve own productivity using IT in digital projects</h3>
                 <h3>Describe how you would go about testing digital solutions</h3>
                 </div>      
