--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                 <p>Being more efficent with Trello would have improved productivity in this task.</p>
                 <h3>Develop solutions to improve own productivity using IT in digital projects</h3>
                 <h3>Describe how you would go about testing digital solutions</h3>
+                <p>Testing digital solutions would be running through them myself, my team (if there was one) and also conducting user testing.</p>
                 </div>      
     </body>
 
