--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                 <h3>Describe ways to improve productivity and efficiency </h3>
                 <p>Being more efficent with Trello would have improved productivity in this task.</p>
                 <h3>Develop solutions to improve own productivity using IT in digital projects</h3>
+                <p>Working in a team would have made this project more efficent. By working in a team we could have delegated tasks based on personal skills, such as creativity, coding etc.</p>
                 <h3>Describe how you would go about testing digital solutions</h3>
                 <p>Testing digital solutions would be running through them myself, my team (if there was one) and also conducting user testing.</p>
                 </div>      
