--- a/index.html
+++ b/index.html
@@ -129,7 +129,11 @@
                 <p>Working in a team would have made this project more efficent. By working in a team we could have delegated tasks based on personal skills, such as creativity, coding etc.</p>
                 <h3>Describe how you would go about testing digital solutions</h3>
                 <p>Testing digital solutions would be running through them myself, my team (if there was one) and also conducting user testing.</p>
-                </div>      
+                <h3>Describing the content and layout for each page</h3>
+                <h3>Describing copyright and other constraints affecting websites </h3>
+                <h3>Describing access issues that need taking into account - describe issues that people with disabilities may face when using webpages and how we can overcome them</h3>
+                <h3>Describe which are the appropriate filetypes for websites </h3>
+        </div>      
     </body>
 
 </html>
