--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                 <h3>Describing copyright and other constraints affecting websites </h3>
                 <h3>Describing access issues that need taking into account - describe issues that people with disabilities may face when using webpages and how we can overcome them</h3>
                 <h3>Describe which are the appropriate filetypes for websites </h3>
+                <p>HTML and CSS are read by multiple browsers which makes these the most appriotiate filetypes for creating websites.</p>
         </div>      
     </body>
 
