--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                 <h3>Describe how you would go about testing digital solutions</h3>
                 <p>Testing digital solutions would be running through them myself, my team (if there was one) and also conducting user testing.</p>
                 <h3>Describing the content and layout for each page</h3>
+                <p>I kept my page minimal by keeping the background white. Each section I used a dashed border in different colours. I also used small images to further break up the sections.</p>
                 <h3>Describing copyright and other constraints affecting websites </h3>
                 <h3>Describing access issues that need taking into account - describe issues that people with disabilities may face when using webpages and how we can overcome them</h3>
                 <h3>Describe which are the appropriate filetypes for websites </h3>
