--- a/index.html
+++ b/index.html
@@ -132,7 +132,11 @@
                 <h3>Describing the content and layout for each page</h3>
                 <p>I kept my page minimal by keeping the background white. Each section I used a dashed border in different colours. I also used small images to further break up the sections.</p>
                 <h3>Describing copyright and other constraints affecting websites </h3>
-                <h3>Describing access issues that need taking into account - describe issues that people with disabilities may face when using webpages and how we can overcome them</h3>
+                <p>Copyright is a significant constraint on developing websites, especially with the implimentation of Article 13 in the EU. As a result, companies are required to add appropriate copyright information on websites for the content which is used</p>
+                <p>GDPR also impacts websites, as businesses are required to ask permission for any data which they may store. This is done through cookies or opt in options which signing up.</p>
+                <p>Fishing is also a concern where a fake copy of a legimate website is used to fish for data such as customers details.</p>
+                <h3>Describing access issues that need taking into account</h3>
+                <p>There are several accessibility issues which need to be taken into account when creating a website. These include using specific colours to account for users who may be visually impaired or colour blind. Similarly, websites can include translate options for users speaking different languages.</p>
                 <h3>Describe which are the appropriate filetypes for websites </h3>
                 <p>HTML and CSS are read by multiple browsers which makes these the most appriotiate filetypes for creating websites.</p>
         </div>      
