expanding on software options

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                     in making your own website, are you happy with the tools you used?</h3>
                 <p>Yes I am happy with the tools I used. They were easy to learn and practical for what I needed. The main benefits were that I could plan the website by making cards and tracking progress. Visual Studio was easy to use and I could download it on my home laptop to practice.</p>
                 <h3>Describe whether the IT tools selected were appropriate</h3>
-                <p>Yes, I used Visual Studio and Trello. These enabled me to organise my work and plan.</p>
+                <p>Yes, I used Visual Studio and Trello. These enabled me to organise my work and plan. For example, on Trello you can create cards for individual tasks. Within these cards I could further divide tasks by using the check lists if needed. Then, as I was working, I could move cards between columns to show where I was with them (e.g. In progress, not started or complete.</p>
+                <p>Similarly, with Visual Studio I could use one piece of software for both HTML and CSS. This meant I could easily switch between tabs to check my work.</p>
                 <h3>Assess the strengths and weaknesses of your final project</h3>
                 <p>The colour scheme is minimalist which is what I wanted. However, it can come across as quite basic.</p>
                 <h3>Describe further improvements you can make to your project</h3>
