updated weaknesses and strength

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
                 <p>Yes, I used Visual Studio and Trello. These enabled me to organise my work and plan. For example, on Trello you can create cards for individual tasks. Within these cards I could further divide tasks by using the check lists if needed. Then, as I was working, I could move cards between columns to show where I was with them (e.g. In progress, not started or complete.</p>
                 <p>Similarly, with Visual Studio I could use one piece of software for both HTML and CSS. This meant I could easily switch between tabs to check my work.</p>
                 <h3>Assess the strengths and weaknesses of your final project</h3>
-                <p>The colour scheme is minimalist which is what I wanted. However, it can come across as quite basic.</p>
+                <p>The colour scheme is minimalist which was the style that I wanted. However, it could come across as quite basic for some users.</p>
+                <p>One strength of the website is that it should be easy to read if someone was visually impaired as the sections are clearly defined and headers are noticable.</p>
                 <h3>Describe further improvements you can make to your project</h3>
                 <p>Going forward I would like to add more pages. I would also like to add personal photos.</p>
                 <h3>Review outcomes to make sure they match requirements and are fit for purpose</h3>
