expanded on pages

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
                 <p>The colour scheme is minimalist which was the style that I wanted. However, it could come across as quite basic for some users.</p>
                 <p>One strength of the website is that it should be easy to read if someone was visually impaired as the sections are clearly defined and headers are noticable.</p>
                 <h3>Describe further improvements you can make to your project</h3>
-                <p>Going forward I would like to add more pages. I would also like to add personal photos.</p>
+                <p>Going forward I would like to add more pages. This would allow me to add more information but also section it off, as currently there is a lot of content on one page which can seem tedious.</p>
+                <p>I would also like to add personal photos. This would avoid the copyright regulations but also as the website was to be personal to me I could make the photos more relevent to the page.</p>
                 <h3>Review outcomes to make sure they match requirements and are fit for purpose</h3>
                 <p>Yes, the website matches the requirements and fit for purpose.</p>
                 <h3>Review the benefits and drawbacks of IT tools and systems used in terms of productivity and efficiency</h3>
