updated efficency and productivity

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <p>The benefits of using Trello was that it could be accessed from the classroom and home. As it's cloud based it also updated in real time. While Visual Studio was not online, I could download the software at home which meant I could continue practicing coding after the lesson.</p>    
                 </p>
                 <h3>Describe ways to improve productivity and efficiency </h3>
-                <p>Being more efficent with Trello would have improved productivity in this task.</p>
+                <p>Being more efficent with Trello would have improved productivity in this task. For example, I could have typed my content on a document and then attached that to Trello rather than typing direct onto Trello. This would have made formatting easier and would have been easier to visualise. I could have also taken advantage of Trello's checklists within each card which could have further broken down each task.</p>
                 <h3>Develop solutions to improve own productivity using IT in digital projects</h3>
                 <p>Working in a team would have made this project more efficent. By working in a team we could have delegated tasks based on personal skills, such as creativity, coding etc.</p>
                 <h3>Describe how you would go about testing digital solutions</h3>
