--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 </p>
                 <h3>Describe ways to improve productivity and efficiency </h3>
                 <p>Being more efficent with Trello would have improved productivity in this task. For example, I could have typed my content on a document and then attached that to Trello rather than typing direct onto Trello. This would have made formatting easier and would have been easier to visualise. I could have also taken advantage of Trello's checklists within each card which could have further broken down each task.</p>
+                <p>Similarly I would have done more indepth research of other similar websites to get ideas and then plan out the website beforehand. This way I could research what I wanted to do, what I wanted it to look like, and also research how to achieve certain things as I spent a lot of time struggling to fix things as I was creating the page.</p>
                 <h3>Develop solutions to improve own productivity using IT in digital projects</h3>
                 <p>Working in a team would have made this project more efficent. By working in a team we could have delegated tasks based on personal skills, such as creativity, coding etc.</p>
                 <h3>Describe how you would go about testing digital solutions</h3>
