Updated user testing section

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <h3>Develop solutions to improve own productivity using IT in digital projects</h3>
                 <p>Working in a team would have made this project more efficent. By working in a team we could have delegated tasks based on personal skills, such as creativity, coding etc.</p>
                 <h3>Describe how you would go about testing digital solutions</h3>
-                <p>Testing digital solutions would be running through them myself, my team (if there was one) and also conducting user testing.</p>
+                <p>Testing digital solutions would be running through them myself, my team (if there was one) and also conducting user testing. I would want to do this on various browsers and devices to make sure that the page was responsive.</p>
                 <h3>Describing the content and layout for each page</h3>
                 <p>I kept my page minimal by keeping the background white. Each section I used a dashed border in different colours. I also used small images to further break up the sections.</p>
                 <h3>Describing copyright and other constraints affecting websites </h3>
