--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
                 <p>Yes, I used Visual Studio and Trello. These enabled me to organise my work and plan. For example, on Trello you can create cards for individual tasks. Within these cards I could further divide tasks by using the check lists if needed. Then, as I was working, I could move cards between columns to show where I was with them (e.g. In progress, not started or complete.</p>
                 <p>Similarly, with Visual Studio I could use one piece of software for both HTML and CSS. This meant I could easily switch between tabs to check my work.</p>
                 <h3>Assess the strengths and weaknesses of your final project</h3>
-                <p>The colour scheme is minimalist which was the style that I wanted. However, it could come across as quite basic for some users.</p>
-                <p>One strength of the website is that it should be easy to read if someone was visually impaired as the sections are clearly defined and headers are noticable.</p>
+                <p>The colour scheme is minimalist which was the style that I wanted. However, it could come across as quite basic for some users. One strength of the website is that it should be easy to read if someone was visually impaired as the sections are clearly defined and headers are noticable.</p>
                 <h3>Describe further improvements you can make to your project</h3>
                 <p>Going forward I would like to add more pages. This would allow me to add more information but also section it off, as currently there is a lot of content on one page which can seem tedious. 
                     I would also like to add personal photos. This would avoid the copyright regulations but also as the website was to be personal to me I could make the photos more relevent to the page.</p>
