expanding on content and layout

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <h3>Describe how you would go about testing digital solutions</h3>
                 <p>Testing digital solutions would be running through them myself, my team (if there was one) and also conducting user testing. I would want to do this on various browsers and devices to make sure that the page was responsive.</p>
                 <h3>Describing the content and layout for each page</h3>
-                <p>I kept my page minimal by keeping the background white. Each section I used a dashed border in different colours. I also used small images to further break up the sections.</p>
+                <p>I kept my page minimal by keeping the background white. The reason I did this was because I liked the style, and it avoids the page feeling too cluttered or being distracted by too many patterns or colours. To define each section I also used a dashed border in different colours which added a bit of variety to the page. And similarly, I also used small images to further break up the sections.</p>
                 <h3>Describing copyright and other constraints affecting websites </h3>
                 <p>Copyright is a significant constraint on developing websites, especially with the implimentation of Article 13 in the EU. As a result, companies are required to add appropriate copyright information on websites for the content which is used</p>
                 <p>GDPR also impacts websites, as businesses are required to ask permission for any data which they may store. This is done through cookies or opt in options which signing up.</p>
